--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ div.yellow{
     background-color:#ffff00;
     text-align:right;
     margin-left:50px;
-    border-width: 0 0 5px 2px;
+    border-width: 0 0 2px 5px;
 }
 div.yellow>p{
     color:#707070;
@@ -71,6 +71,7 @@ footer{
 footer>p{
     font-size: 20px;
     padding: 15px 15px 15px 0;
+    text-align: right;
 }
 
 
