--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,7 @@ p{
 img{
     width:250px;
     display: block;
-    margin-left:auto;
-    margin-right: auto;
+    text-align: center;
     border:10px dashed #ffffff
 }
 div{
