--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ img{
     width:250px;
     display: block;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     border:10px dashed #ffffff
 }
 div{
